--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>แอพคำนวณค่าไฟ</title>
+    <title>แอพคำนวณค่าไฟbyเอกตากล้องสายเปย์</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,13 +32,13 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #2e68e7;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>คำนวณค่าไฟ</h1>
+        <h1>คำนวณค่าไฟByเอก-ตากล้องสายเปย์</h1>
         <label for="unit">ปริมาณไฟฟ้าที่ใช้ (หน่วย):</label>
         <input type="number" id="unit" placeholder="กรอกจำนวนหน่วยไฟฟ้า">
         <label for="rate">อัตราค่าไฟฟ้าต่อหน่วย (บาท):</label>
